# SmallPrograms

./: .gitignore  README.md
C++/crossword/: clue.cpp  clue.h  clues.csv  crossword  grid.h
C++/linear_algebra/: makefile  row.cpp  row.h  test_row.cpp
C/misc/: ascii.c  heap_test.c  stack_test.c
C/streams/: makefile  read_rand.s
Javascript/Markdown/: index.html  index.js  markdown.js  markdown.json  package.json
Javascript/open_url/: package.json  server.js
assembly/LLL/: LLL.S  LLL.c  LLL.h  Makefile  main.c
assembly/encrypt/: Makefile  encrypt.c  encrypt_asm.S  main.c
assembly/fib/: Makefile  fib.c  fib_asm.S  main.c
assembly/hash/: Makefile  hash.c  hash_asm.S  main.c
assembly/increment/: fact.S  fact.c  main.c
assembly/interrupts/: Makefile  interrupts.c  main.c
assembly/lower/: Makefile  lower.c  lower_asm_complex.S  lower_asm_simple.S  main.c  make_text.py
assembly/password/: main.S
assembly/simple_functions/: Makefile  functions.S  functions.c  functions.h  functions.s  main.c
assembly/stack_test/: Makefile  main.c  stack  stack.c  stack_asm  stack_asm.S
assembly/utf8/: Makefile  README.md  main.c  (+6 more)
cell_simulation/: CMakeLists.txt  main.cpp
cell_simulation/cell/: CMakeLists.txt  seed.cpp  seed.h
crossword/: .gitignore  Makefile  clues.csv  crossword.cpp  crossword.h  grid.cpp  main.cpp
elementary_math/: congruence.py  divisors.py
file_backup/: Makefile  main.c  track_file.c  track_file.h
linear_algebra/: matrix.cpp
misc/: bytes.c  test.txt  upcasting.cpp  word_count.py
server/: Makefile  README.md  client.c  server.c
(+180 files in other folders)
